[package]
name = "wenceslas"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
axum = "0.8.4"
base64 = "0.22.1"
bcrypt = "0.17.1"
csv = "1.3.1"
dotenvy = "0.15.7"
hmac = "0.12.1"
http-body-util = "0.1.3"
log = "0.4.27"
mime = "0.3.17"
phpass = "0.1.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sha2 = "0.10.9"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "signal"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace", "timeout"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

